# ml-service

./: .env.template  .gitignore  README.md  docker-compose.yaml  pyproject.toml
docker/: Dockerfile.app  Dockerfile.streamlit  Dockerfile.worker
ml/: preprocessing.ipynb
src/: main.py  utils.py
src/config/: __init__.py  settings.py
src/core/entities/: __init__.py  prediction_event.py  predictor.py  user.py  user_balance.py
src/core/repositories/: __init__.py  prediction_event_repository.py  predictor_repository.py  user_balance_repository.py  user_repository.py
src/core/use_cases/: __init__.py  prediction_event_use_cases.py  predictor_use_cases.py  user_balance_use_cases.py  user_use_cases.py
src/infrastructure/db/: utils.py
src/infrastructure/db/models/: __init__.py  prediction_event_model.py  predictor_model.py  user_balance_model.py  user_model.py
src/infrastructure/db/repositories/: __init__.py  prediction_event_repository_impl.py  predictor_repository_impl.py  user_balance_repository_impl.py  user_repository_impl.py
src/infrastructure/tasks/: model_predict.py
src/infrastructure/web/controllers/: get_current_user.py  predictor_controller.py  user_balance_controller.py  user_controller.py
src/infrastructure/web/models/: __init__.py  predict_models.py  user_balance_models.py  user_models.py
streamlit_app/: main.py  post_requests.py
streamlit_app/pages/: 1_start.py  2_history.py
workers/: rq_worker.py
